# hubris

./: Cargo.toml  README.mkdn
app/demo-stm32h7-nucleo/: app-h743.toml  app-h753.toml
app/gemini-bu/: app.toml
app/gemini-bu-rot/: Cargo.toml
app/gimlet/: app.toml
app/gimlet-rot/: Cargo.toml
app/gimletlet/: app.toml
app/lpc55xpresso/: app.toml
app/lpc55xpresso/src/: main.rs
app/sidecar/: app.toml
drv/gimlet-hf-server/src/: main.rs
drv/gimlet-seq-server/src/: main.rs
drv/i2c-devices/src/: raa229618.rs
drv/ksz8463/src/: lib.rs
drv/sidecar-seq-server/: Cargo.toml  build.rs  controller_fpga_regs.json
drv/sidecar-seq-server/src/: controller_fpga.rs  main.rs
drv/stm32g0-sys-api/src/: lib.rs
drv/stm32g0-sys/src/: main.rs
drv/stm32h7-hash-server/: Cargo.toml
drv/stm32h7-hash-server/src/: main.rs
drv/stm32h7-hash/src/: lib.rs
drv/stm32h7-spi-server/src/: main.rs
drv/user-leds/src/: main.rs
drv/vsc7448/: Cargo.toml
idl/: gimlet-hf.idol  hash.idol  sidecar-seq.idol  spdm.idol
reference/: index.html
stage0/: Cargo.toml
stage0/src/: image_header.rs  main.rs
sys/abi/: Cargo.toml
sys/abi/src/: lib.rs
task/hiffy/: Cargo.toml
task/hiffy/src/: common.rs  stm32h7.rs
task/net/: Cargo.toml
task/net/src/: main.rs  server.rs
task/net/src/bsp/: nucleo_h7.rs  sidecar_1.rs
task/spdm-responder/: Cargo.toml
task/spdm-responder/src/: main.rs
task/vsc7448/: Cargo.toml
task/vsc7448/src/bsp/: sidecar_1.rs
