[package]
name = "abi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zerocopy = "0.6.1"
bitflags = "1.2.1"
byteorder = { version = "1.3.4", default-features = false }
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
packed_struct = {version = "0.10.0", optional = true }
packed_struct_codegen = {version = "0.10.0", optional = true}

[features]
default = []
std = ["packed_struct", "packed_struct_codegen"]

[lib]
test = false
bench = false
