[package]
name = "task-spdm-responder"
version = "0.1.0"
edition = "2018"

[dependencies]
userlib = {path = "../../sys/userlib", features = ["panic-messages"]}
zerocopy = "0.6.1"
num-traits = { version = "0.2.12", default-features = false }
ringbuf = {path = "../../lib/ringbuf"}
idol-runtime = {git = "https://github.com/oxidecomputer/idolatry.git"}
#spdm = {git = "https://github.com/oxidecomputer/spdm.git", branch = "crypto-cfg"}
spdm = {path = "../../../spdm"}

[build-dependencies]
#build-util = {path = "../../build/util"}
idol = {git = "https://github.com/oxidecomputer/idolatry.git"}

# This section is here to discourage RLS/rust-analyzer from doing test builds,
# since test builds don't work for cross compilation.
[[bin]]
name = "task-spdm-responder"
test = false
bench = false
